5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1643_2704.log
== TEST (2019-04-08 15:15:48) 
-- CODE:
nota=float(input("aluno: "))
msn=float(input("bonificacao (s/n: ")))
-- ERROR:
File "XXXX", line 2
    msn=float(input()))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:15:58) 
-- CODE:
nota=float(input("aluno: "))
msn=float(input("bonificacao (s/n: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    msn=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:18:08) 
-- CODE:
nota=float(input("aluno: "))
msn=float(input("bonificacao (s/n: "))
if(opçao.upper()=="S"):
	
-- ERROR:
File "XXXX", line 5
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:18:18) 
-- CODE:
nota=float(input("aluno: "))
msn=float(input("bonificacao (s/n: "))
if(opçao.upper()=="S"):
-- ERROR:
File "XXXX", line 4
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:18:30) 
-- CODE:
nota=float(input("aluno: "))
msn=float(input("bonificacao (s/n: "))
if(opcao.upper()=="S"):
-- ERROR:
File "XXXX", line 4
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:18:54) 
-- CODE:
nota=float(input("aluno: "))
msn=float(input("bonificacao (s/n: "))
if(opcao.upper() == "s"):
-- ERROR:
File "XXXX", line 4
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:20:13) 
-- CODE:
nota=float(input("aluno: "))
msn=float(input("bonificacao? (s/n): "))
if(opcao.upper() == "S"):
	boni = s
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    msn=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:53:19) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao? (S/N, .upper()): ")


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    msn=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:58:51) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao?"(s ou n).uper())
posi=10
if ()


	
-- ERROR:
File "XXXX", line 2
    msn=input("bonificacao?"(s ou n).uper())
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:59:08) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao?"(s ou n).upper)
posi=10
if ()


	
-- ERROR:
File "XXXX", line 2
    msn=input("bonificacao?"(s ou n).upper)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:59:44) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao?(s ou n)".upper())
posi=10
if ()


	
-- ERROR:
File "XXXX", line 4
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:59:51) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao?(s ou n)".upper())
posi=10



	
-- OUTPUT:
BONIFICACAO?(S OU N)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:00:30) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao?(s ou n).upper())"
posi=10



	
-- ERROR:
File "XXXX", line 3
    posi=10
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:00:44) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao?(s ou n).upper())"




	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:00:48) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao?(s ou n).upper())"




	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:01:46) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao?(s ou n)".upper()

-- ERROR:
File "XXXX", line 3
    
                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:01:54) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao?(s ou n)".upper()
-- ERROR:
File "XXXX", line 3
    
                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:03:59) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao(s ou n):".upper()
-- ERROR:
File "XXXX", line 3
    
                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:21:54) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao(s ou n):"
posi (10)
if(nota>s) (nota<n):
	notafinal(nota, posi)
else
-- ERROR:
File "XXXX", line 3
    posi (10)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:25:50) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao s ou n"
if (msn.upper()=="s")
	nota=nota/2
else
	nota=nota/2		 

-- ERROR:
File "XXXX", line 4
    nota=nota/2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:25:59) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao s ou n"
if (msn.upper()=="s")
	 

-- ERROR:
File "XXXX", line 5
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:30:43) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao s ou n"
if (msn.upper()=="s")
-- ERROR:
File "XXXX", line 4
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:30:52) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao s ou n"
if (msn.upper()=="s"):
-- ERROR:
File "XXXX", line 3
    if (msn.upper()=="s"):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:31:00) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao s ou n"
if (msn.upper()=="S"):
-- ERROR:
File "XXXX", line 3
    if (msn.upper()=="S"):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:40:37) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao s ou n"
if (nota=="s/n"):
-- ERROR:
File "XXXX", line 3
    if (nota=="s/n"):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:42:43) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao: s ou n")
if (nota=="S ou N"):
-- ERROR:
File "XXXX", line 4
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:42:53) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao: s ou n")
if (nota=="S"):
-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:43:02) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao: s ou n")
if (nota==S):
-- ERROR:
File "XXXX", line 4
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:43:16) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao: s ou n")
if ("nota==S"):
-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:44:20) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao: s ou n")
if (nota.upper()=="S"):
-- ERROR:
File "XXXX", line 4
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:49:24) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao: s ou n")
if (msn.upper()=="S") (msn.upper()=="N"):
	positivo()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (msn.upper()=="S") (msn.upper()=="N"):
TypeError: 'bool' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:49:38) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao: s ou n")
if (msn.upper()=="S") (msn.upper()=="N"):
	positivo()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (msn.upper()=="S") (msn.upper()=="N"):
TypeError: 'bool' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:49:40) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao: s ou n")
if (msn.upper()=="S") (msn.upper()=="N"):
	positivo()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (msn.upper()=="S") (msn.upper()=="N"):
TypeError: 'bool' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:05:31) 
-- CODE:
nota=float(input("aluno: "))
msn=input(bonificacao.upper()s ou n
if nota>
	
-- ERROR:
File "XXXX", line 2
    msn=input(bonificacao.upper()s ou n
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:05:39) 
-- CODE:
nota=float(input("aluno: "))
msn=input(bonificacao.upper()
if nota>
	
-- ERROR:
File "XXXX", line 5
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:06:10) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao".upper()
if nota>
	
-- ERROR:
File "XXXX", line 5
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:06:15) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao".upper()
	
-- ERROR:
File "XXXX", line 4
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:06:21) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao".upper()
	
-- ERROR:
File "XXXX", line 4
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:06:25) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao".upper()	
-- ERROR:
File "XXXX", line 3
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:06:50) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao".upper()	
-- ERROR:
File "XXXX", line 3
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:07:01) 
-- CODE:
nota=float(input("aluno: "))
msn=input("bonificacao".upper())	
-- OUTPUT:
BONIFICACAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:07:20) 
-- CODE:
nota=float(input("aluno: "))
msn=input("S".upper())	
-- OUTPUT:
S
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:09:57) 
-- CODE:
nota=float(input("aluno: "))
msn=input("S".upper())
if nota==10 :
	notafinal("S".upper())
else
	notafinal("N".upper())
-- ERROR:
File "XXXX", line 5
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:10:07) 
-- CODE:
nota=float(input("aluno: "))
msn=input("S".upper())
if nota==10 :
	notafinal("S".upper())
else:
	notafinal("N".upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    notafinal("N".upper())
NameError: name 'notafinal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:10:52) 
-- CODE:
nota=float(input("aluno: "))
msn=input("S".upper())
if nota==10 :
	notafinal("S".upper())
else:
	notafinal("N".upper())
print(float(notafinal, msn))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    notafinal("N".upper())
NameError: name 'notafinal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:11:19) 
-- CODE:
nota=float(input("aluno: "))
msn=input("S".upper())
if nota==10 :
	notaf("S".upper())
else:
	notaf("N".upper())
print(float(notaf, msn))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    notaf("N".upper())
NameError: name 'notaf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:12:42) 
-- CODE:
nota=float(input("aluno: "))
msn=input("S".upper())
if nota>10 :
	notaf("S".upper())
else:
	notaf("N".upper())
print(float(notaf, msn))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    notaf("N".upper())
NameError: name 'notaf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:16:12) 
-- CODE:
nota=float(input("aluno: "))
msn=input("S".upper())
msnn=input("N".upper())
if nota>10 :
		
-- ERROR:
File "XXXX", line 6
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:16:56) 
-- CODE:
nota=float(input("aluno: "))
msn=input("S".upper())
msnn=input("N".upper())
if nota>10 :
	print(float(nota, msn)	
-- ERROR:
File "XXXX", line 6
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:17:03) 
-- CODE:
nota=float(input("aluno: "))
msn=input("S".upper())
msnn=input("N".upper())
if nota==10 :
	print(float(nota, msn)	
-- ERROR:
File "XXXX", line 6
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:17:43) 
-- CODE:
nota=float(input("aluno: "))
msn=input("S".upper())
msnn=input("N".upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    msnn=input("N".upper())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:18:14) 
-- CODE:
nota=float(input("aluno: "))
msn=input("S".upper())
msnn=input("N".upper())
if nota>5==10
-- ERROR:
File "XXXX", line 4
    if nota>5==10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:18:22) 
-- CODE:
nota=float(input("aluno: "))
msn=input("S".upper())
msnn=input("N".upper())
if nota>5==10 :
-- ERROR:
File "XXXX", line 5
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:30:57) 
-- CODE:
nota=float(input("aluno: "))
msn=input("vai receber a bonificacao ? S/N")
if msn.upper()=="S" :
	print(round())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round())
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:35:49) 
-- CODE:
nota=float(input("aluno: "))
msn=input("vai receber a bonificacao:")
if msn.upper()=="S" :
	print(round())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round())
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:37:28) 
-- CODE:
nota=float(input("aluno: "))
msn=input("vai receber a bonificacao:")
if msn.upper()=="S" :
	print(float("nota", msn.upper())
else:
	print(float("nota", msn.upper())		

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:37:47) 
-- CODE:
nota=float(input("aluno: "))
msn=input("vai receber a bonificacao:")
if msn.upper()=="S" :
	print(float("nota", msn.upper()))
else:
	print(float("nota", msn.upper()))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(float("nota", msn.upper()))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:38:08) 
-- CODE:
nota=float(input("aluno: "))
msn=input("vai receber a bonificacao:")
if msn.upper()=="S" :
	print(round("nota", msn.upper()))
else:
	print(round("nota", msn.upper()))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("nota", msn.upper()))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:40:39) 
-- CODE:
nota=float(input("aluno: "))
msn=input("vai receber a bonificacao:")
boni=10
if msn.upper()=="S" :
	print(float("nota", boni)
	

-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 11:26:48) 
-- CODE:
nota=float(input("aluno: "))
msn=input("vai receber a bonificacao:")
if msn.upper()=="S" :
	print(float("nota", boni)
	

-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
